--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,12 +17,12 @@
                     <input type="button" value="C" onclick="Clear()" id="clear">
                     <input type="button" value="⌫" onclick="Back()" id="backspace">
                     <input type="button" value="%" onclick="Solve('%')">
-                    <input type="button" value="÷" onclick="Solve('/')">
+                    <input type="button" value="x" onclick="Solve('*')">
                     <br>
                     <input type="button" value="7" onclick="Solve('7')">
                     <input type="button" value="8" onclick="Solve('8')">
                     <input type="button" value="9" onclick="Solve('9')">
-                    <input type="button" value="×" onclick="Solve('*')">
+                    <input type="button" value="÷" onclick="Solve('/')">
                     <br>
                     <input type="button" value="4" onclick="Solve('4')">
                     <input type="button" value="5" onclick="Solve('5')">
